--- a/file3.html
+++ b/file3.html
@@ -35,7 +35,7 @@
         </tr>
         <tr>
           <td valign="middle" width="40"><img src="https://i.ibb.co/mV31xyjY/Frame-3.png" width="" alt="Website"></td>
-          <td><strong>website:</strong> <a href="https://www.hallinans.example" style="color:#FFF; text-decoration:none;">www.hallinans.example</a></td>
+          <td><strong>Website:</strong> <a href="https://www.hallinans.example" style="color:#FFF; text-decoration:none;">www.hallinans.example</a></td>
         </tr>
         <tr>
           <td valign="middle" width="40"><img src="https://i.ibb.co/cKSVSz26/Group-3.png" width="" alt="CJSM"></td>
