--- a/file2.html
+++ b/file2.html
@@ -32,7 +32,7 @@
         </tr>
         <tr>
           <td valign="middle" width="40"><img src="https://i.ibb.co/cmTvh8K/Frame-2.png" width="32" alt="Website"></td>
-          <td><strong>website:</strong> <a href="https://www.hallinans.example" style="color:#233e6f; text-decoration:none;">www.hallinans.example</a></td>
+          <td><strong>Website:</strong> <a href="https://www.hallinans.example" style="color:#233e6f; text-decoration:none;">www.hallinans.example</a></td>
         </tr>
         <tr>
           <td valign="middle" width="40"><img src="https://i.ibb.co/FqVZQdgx/Group-1-3.png" width="32" alt="CJSM"></td>
