new add template

--- a/file2.html
+++ b/file2.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Email Signature</title>
+<title>Email2</title>
 </head>
 <body style="margin:0; padding:0; font-family: Arial, Helvetica, sans-serif;">
 
-<table border="0" cellpadding="0" cellspacing="0" style="width:100%; max-width:500px; background-color:#ffffff; margin:40px auto; padding:20px; border-radius:20px; border:2px solid #e8cf6e; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
+<table border="0" cellpadding="0" cellspacing="0" style="width:100%; max-width:800px; background-color:#ffffff; margin:40px auto; padding:20px; border-radius:20px; border:2px solid #e8cf6e; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
   <tr>
     <td align="left" style="padding-bottom:10px;">
       <img src="https://i.ibb.co/PvK2tS9x/Hallinans-logo-Blue.png" alt="Hallinans Logo" width="200" style="display:block;">
@@ -16,27 +16,32 @@
 
   <!-- Contact Info -->
   <tr>
-    <td style="font-size:14px; color:#233e6f;">
+    <td style="font-size:18px; color:#233e6f;">
       <table border="0" cellpadding="4" cellspacing="0">
         <tr>
           <td valign="middle" width="40"><img src="https://i.ibb.co/gF7YFKhv/Group-1.png" width="32" alt="Office Phone"></td>
-          <td><strong>Office:</strong> <a href="tel:1234567890" style="color:#233e6f; text-decoration:none;">123-456-7890</a></td>
+          <td><strong>Office:</strong> <a href="tel:1234567890" style="color:#233e6f; text-decoration:none;">0207 828 8253</a></td>
         </tr>
-        <tr>
+        <!-- <tr>
           <td valign="middle" width="40"><img src="https://i.ibb.co/DgLRthwJ/Group-1-2.png" width="32" alt="Mobile"></td>
           <td><strong>Mobile:</strong> <a href="tel:1234567890" style="color:#233e6f; text-decoration:none;">123-456-7890</a></td>
-        </tr>
+        </tr> -->
         <tr>
           <td valign="middle" width="40"><img src="https://i.ibb.co/3YCtsRbz/Frame-1.png" width="32" alt="Emergency"></td>
-          <td><strong>Emergency:</strong> <a href="tel:1234567890" style="color:#233e6f; text-decoration:none;">123-456-7890</a></td>
+          <td><strong>Emergency:</strong> <a href="tel:1234567890" style="color:#233e6f; text-decoration:none;">07831 406242</a></td>
         </tr>
         <tr>
           <td valign="middle" width="40"><img src="https://i.ibb.co/cmTvh8K/Frame-2.png" width="32" alt="Website"></td>
           <td><strong>Website:</strong> <a href="https://www.hallinans.example" style="color:#233e6f; text-decoration:none;">www.hallinans.example</a></td>
         </tr>
+       
+         <!-- Emails -->
         <tr>
-          <td valign="middle" width="40"><img src="https://i.ibb.co/FqVZQdgx/Group-1-3.png" width="32" alt="CJSM"></td>
-          <td><strong>Secure email:</strong> <a href="mailto:namita.pawa@hallinans.cjsm.net" style="color:#233e6f; text-decoration:none;">namita.pawa@hallinans.cjsm.net</a></td>
+           <td valign="middle" width="40"><img src="https://i.ibb.co/FqVZQdgx/Group-1-3.png" width="32" alt="CJSM"></td>
+          <td style="padding-top:10px; font-weight:500; color:#233e6f;"> <strong>Secure email:</strong>
+            <a href="mailto:areesha@hallinans.co.uk" style="color:#233e6f; text-decoration:none;">areesha@hallinans.co.uk</a> | 
+            <a href="mailto:areesha@cjsm.net" style="color:#233e6f; text-decoration:none;">areesha@cjsm.net</a>
+          </td>
         </tr>
       </table>
     </td>
