--- a/file6.html
+++ b/file6.html
@@ -123,15 +123,12 @@
             <img src="https://i.ibb.co/7Jf3m6tB/Firm-Logo-1.jpg" alt="Chambers & Partners Firm" width="100%" style="display:block; margin:0 auto;">
           </td>
           <td align="center" width="50%" style="padding:10px;">
-            <img src="https://i.ibb.co/8kfr39G/Legal-500-UK-Leading-firm-2026.png" alt="Legal 500" width="100%" style="display:block; margin:0 auto;">
+            <img src="https://i.ibb.co/7th7SPPV/UK-Leading-firm-2026-272x300.webp" alt="Legal 500" width="100%" style="display:block; margin:0 auto;">
           </td>
         </tr>
       </table>
     </td>
   </tr>
-
- 
-
 </table>
 
 </body>
