--- a/file6.html
+++ b/file6.html
@@ -62,7 +62,7 @@
         <!-- Office Address -->
         <tr>
           <td valign="top"><img src="https://i.ibb.co/S4PnQKsd/Frame-10.png" alt="Address"></td>
-          <td>Hallinans, 123 Buckingham Palace Road, London SW1W 9SR</td>
+          <td>Alexandra House, 55A Catherine Place, London SW1E 6DY</td>
         </tr>
 
       </table>
