--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
   <!-- Name & Title -->
   <tr>
-    <td style="padding-top:10px; font-size:20px; font-weight:bold; color:#233e6f;">Areesha Khan</td>
+    <td style="padding-top:10px; font-size:20px; font-weight:bold; color:#233e6f;">Maya Kendrick
+
+</td>
   </tr>
   <tr>
     <td style="font-size:16px; color:#233e6f; padding:6px 0;">Legal Assistant</td>
@@ -58,7 +60,7 @@
         <tr>
           <td valign="top"><img src="https://i.ibb.co/G3JzsZNs/Frame-9.png" alt="" width=""></td>
           <td style="font-size:16px; font-weight:500; color:#233e6f; line-height:20px;">
-            Hallinans, 123 Buckingham Palace Road, London SW1W 9SR
+           Alexandra House, 55A Catherine Place, London SW1E 6DY
           </td>
         </tr>
 
