--- a/file6.html
+++ b/file6.html
@@ -29,43 +29,69 @@
   <!-- Contact Info -->
   <tr>
     <td style="font-size:18px; color:#FFF; padding-top: 12px;">
-      <table border="0" cellpadding="4" cellspacing="0">
+        <table border="0" cellpadding="4" cellspacing="0">
 
         <!-- Office + Emergency in one line -->
         <tr>
-          <td valign="middle" width="40"><img src="https://i.ibb.co/QFrrhBbW/Group-2.png" alt="Office Phone"></td>
-          <td><strong>Office:</strong> 0207 828 8253 &nbsp; | &nbsp; <strong>Emergency:</strong> 07831 406242</td>
+            <td valign="middle" width="40">
+            <img src="https://i.ibb.co/QFrrhBbW/Group-2.png" alt="Office Phone">
+            </td>
+            <td>
+            <strong>Office:</strong> 
+            <a href="tel:02078288253" style="color:#FFF; text-decoration:none;">0207 828 8253</a>
+            &nbsp; | &nbsp;
+            <strong>Emergency:</strong> 
+            <a href="tel:07831406242" style="color:#FFF; text-decoration:none;">07831 406242</a>
+            </td>
         </tr>
 
         <!-- Mobile -->
         <tr>
-          <td valign="middle" width="40"><img src="https://i.ibb.co/R42pD34g/Frame-8.png" alt="Mobile"></td>
-          <td><strong>Mobile:</strong> 07831 406242</td>
+            <td valign="middle" width="40">
+            <img src="https://i.ibb.co/R42pD34g/Frame-8.png" alt="Mobile">
+            </td>
+            <td>
+            <strong>Mobile:</strong> 
+            <a href="tel:07831406242" style="color:#FFF; text-decoration:none;">07831 406242</a>
+            </td>
         </tr>
 
-        <!-- Website + Secure email -->
+        <!-- Website -->
         <tr>
-          <td valign="middle" width="40"><img src="https://i.ibb.co/mV31xyjY/Frame-3.png" alt="Website"></td>
-          <td>
-            <strong>Website:</strong> <a href="https://www.hallinans.co.uk" style="color:#FFF; text-decoration:none;">www.hallinans.co.uk</a>
-            
-          </td>
+            <td valign="middle" width="40">
+            <img src="https://i.ibb.co/mV31xyjY/Frame-3.png" alt="Website">
+            </td>
+            <td>
+            <strong>Website:</strong> 
+            <a href="https://www.hallinans.co.uk" style="color:#FFF; text-decoration:none;">www.hallinans.co.uk</a>
+            </td>
         </tr>
 
-        <!-- Hallinans Email -->
+        <!-- Emails -->
         <tr>
-          <td valign="middle" width="40"><img src="https://i.ibb.co/cKSVSz26/Group-3.png" alt="Email"></td>
-         <td><strong>Secure email:</strong> <a href="mailto:namita.pawa@hallinans.co.uk" style="color:#FFF; text-decoration:none;">namita.pawa@hallinans.co.uk</a> &nbsp; | &nbsp;
-             <a href="mailto:namita.pawa@cjsm.net" style="color:#FFF; text-decoration:none;">namita.pawa@cjsm.net</a></td>
+            <td valign="middle" width="40">
+            <img src="https://i.ibb.co/cKSVSz26/Group-3.png" alt="Email">
+            </td>
+            <td>
+            <strong>Secure email:</strong> 
+            <a href="mailto:namita.pawa@hallinans.co.uk" style="color:#FFF; text-decoration:none;">namita.pawa@hallinans.co.uk</a> 
+            &nbsp; | &nbsp;
+            <a href="mailto:namita.pawa@cjsm.net" style="color:#FFF; text-decoration:none;">namita.pawa@cjsm.net</a>
+            </td>
         </tr>
 
-        <!-- Office Address -->
+        <!-- Address -->
         <tr>
-          <td valign="top"><img src="https://i.ibb.co/S4PnQKsd/Frame-10.png" alt="Address"></td>
-          <td>Alexandra House, 55A Catherine Place, London SW1E 6DY</td>
+            <td valign="top">
+            <img src="https://i.ibb.co/S4PnQKsd/Frame-10.png" alt="Address">
+            </td>
+            <td>
+            <a href="https://www.google.com/maps?q=Alexandra+House,+55A+Catherine+Place,+London+SW1E+6DY" target="_blank" style="color:#FFF; text-decoration:none;">
+                Alexandra House, 55A Catherine Place, London SW1E 6DY
+            </a>
+            </td>
         </tr>
-
-      </table>
+     </table>
     </td>
   </tr>
 
