--- a/index.html
+++ b/index.html
@@ -30,41 +30,64 @@
   <tr>
     <td>
       <table border="0" cellpadding="4" cellspacing="0">
-        
-        <!-- Emails -->
-        <tr>
-          <td valign="center"><img src="https://i.ibb.co/FqVZQdgx/Group-1-3.png" alt="" width=""></td>
-          <td style="font-size:16px; font-weight:500; color:#233e6f;">
-            <a href="mailto:areesha@hallinans.co.uk" style="color:#233e6f; text-decoration:none; padding-right: 10px;">areesha@hallinans.co.uk</a> | 
-            <a href="mailto:areesha@cjsm.net" style="color:#233e6f; text-decoration:none; padding-left: 10px;">areesha@cjsm.net</a>
-          </td>
-        </tr>
+  
+  <!-- Emails -->
+  <tr>
+    <td valign="center">
+      <img src="https://i.ibb.co/FqVZQdgx/Group-1-3.png" alt="" width="">
+    </td>
+    <td style="font-size:16px; font-weight:500; color:#233e6f;">
+      <a href="mailto:areesha@hallinans.co.uk" style="color:#233e6f; text-decoration:none; padding-right: 10px;">
+        areesha@hallinans.co.uk
+      </a> | 
+      <a href="mailto:areesha@cjsm.net" style="color:#233e6f; text-decoration:none; padding-left: 10px;">
+        areesha@cjsm.net
+      </a>
+    </td>
+  </tr>
 
-        <!-- Office + Emergency -->
-        <tr>
-          <td valign="center"><img src="https://i.ibb.co/gF7YFKhv/Group-1.png" alt="" width=""></td>
-          <td style="font-size:16px; font-weight:500; color:#233e6f;">
-            <strong>Office:</strong> 0207 828 8253 &nbsp; | &nbsp; <strong>Emergency:</strong> 07831 406242
-          </td>
-        </tr>
+  <!-- Office + Emergency -->
+  <tr>
+    <td valign="center">
+      <img src="https://i.ibb.co/gF7YFKhv/Group-1.png" alt="" width="">
+    </td>
+    <td style="font-size:16px; font-weight:500; color:#233e6f;">
+      <strong>Office:</strong> 
+      <a href="tel:02078288253" style="color:#233e6f; text-decoration:none;">0207 828 8253</a>
+      &nbsp; | &nbsp;
+      <strong>Emergency:</strong> 
+      <a href="tel:07831406242" style="color:#233e6f; text-decoration:none;">07831 406242</a>
+    </td>
+  </tr>
 
-        <!-- Website -->
-        <tr>
-          <td valign="center"><img src="https://i.ibb.co/cmTvh8K/Frame-2.png" alt="" width=""></td>
-          <td style="font-size:16px; font-weight:500;">
-            <a href="https://www.hallinans.co.uk" style="color:#233e6f; text-decoration:none;">www.hallinans.co.uk</a>
-          </td>
-        </tr>
+  <!-- Website -->
+  <tr>
+    <td valign="center">
+      <img src="https://i.ibb.co/cmTvh8K/Frame-2.png" alt="" width="">
+    </td>
+    <td style="font-size:16px; font-weight:500;">
+      <a href="https://www.hallinans.co.uk" style="color:#233e6f; text-decoration:none;">
+        www.hallinans.co.uk
+      </a>
+    </td>
+  </tr>
 
-        <!-- Office Address -->
-        <tr>
-          <td valign="top"><img src="https://i.ibb.co/G3JzsZNs/Frame-9.png" alt="" width=""></td>
-          <td style="font-size:16px; font-weight:500; color:#233e6f; line-height:20px;">
-           Alexandra House, 55A Catherine Place, London SW1E 6DY
-          </td>
-        </tr>
+  <!-- Office Address -->
+  <tr>
+    <td valign="top">
+      <img src="https://i.ibb.co/G3JzsZNs/Frame-9.png" alt="" width="">
+    </td>
+    <td style="font-size:16px; font-weight:500; color:#233e6f; line-height:20px;">
+      <a href="https://www.google.com/maps?q=Alexandra+House,+55A+Catherine+Place,+London+SW1E+6DY" 
+         target="_blank" 
+         style="color:#233e6f; text-decoration:none;">
+        Alexandra House, 55A Catherine Place, London SW1E 6DY
+      </a>
+    </td>
+  </tr>
 
       </table>
+
     </td>
   </tr>
 
