--- a/file6.html
+++ b/file6.html
@@ -101,13 +101,13 @@
   </tr>
   <tr>
     <td style="padding: 20px 0;">
-      <a href="https://uk.linkedin.com/company/hallinan-blackburn-gittings-nott-llp" style="text-decoration:none;">
+      <a target="_blank" href="https://uk.linkedin.com/company/hallinan-blackburn-gittings-nott-llp" style="text-decoration:none;">
         <img src="https://i.ibb.co/Zz1qzvQc/Frame-4.png" alt="LinkedIn" style="margin-right:6px; vertical-align:middle;">
       </a>
-      <a href="https://www.facebook.com/p/Hallinan-Blackburn-Gittings-Nott-61554381287448/" style="text-decoration:none;">
+      <a target="_blank" href="https://www.facebook.com/p/Hallinan-Blackburn-Gittings-Nott-61554381287448/" style="text-decoration:none;">
         <img src="https://i.ibb.co/hFDhY52h/Frame-5.png" alt="Facebook" style="margin-right:6px; vertical-align:middle;">
       </a>
-      <a href="https://www.instagram.com/hallinanscriminaldefence/?hl=en" style="text-decoration:none;">
+      <a target="_blank" href="https://www.instagram.com/hallinanscriminaldefence/?hl=en" style="text-decoration:none;">
         <img src="https://i.ibb.co/HLmtB0Tc/Frame-6.png" alt="Instagram" style="vertical-align:middle;">
       </a>
     </td>
