--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
   <!-- Social Icons -->
   <tr>
     <td style="padding:15px 0 30px; ">
-      <a href="https://uk.linkedin.com/company/hallinan-blackburn-gittings-nott-llp" style="text-decoration:none;">
+      <a target="_blank" href="https://uk.linkedin.com/company/hallinan-blackburn-gittings-nott-llp" style="text-decoration:none;">
         <img src="https://i.ibb.co/0VJsQ4Ld/Frame-2.png" alt="LinkedIn" style="margin-right:6px; vertical-align:middle;">
       </a>
-      <a href="https://www.facebook.com/p/Hallinan-Blackburn-Gittings-Nott-61554381287448/" style="text-decoration:none;">
+      <a target="_blank" href="https://www.facebook.com/p/Hallinan-Blackburn-Gittings-Nott-61554381287448/" style="text-decoration:none;">
         <img src="https://i.ibb.co/dJpd6sSH/Frame-1.png" alt="Facebook" style="margin-right:6px; vertical-align:middle;">
       </a>
-      <a href="https://www.instagram.com/hallinanscriminaldefence/?hl=en" style="text-decoration:none;">
+      <a target="_blank" href="https://www.instagram.com/hallinanscriminaldefence/?hl=en" style="text-decoration:none;">
         <img src="https://i.ibb.co/qF1p927w/Frame.png" alt="Instagram" style="vertical-align:middle;">
       </a>
     </td>
