--- a/file4.html
+++ b/file4.html
@@ -16,32 +16,80 @@
         </div>
     </td>
   </tr>
+   <!-- Name & Title -->
+  <tr>
+    <td style="font-size:20px; font-weight:bold; color:#fff; padding-top: 20px;">Namita Pawa</td>
+  </tr>
+  <tr>
+    <td style="font-size:16px; color:#fff; padding:8px 0;">Partner</td>
+  </tr>
 
   <!-- Contact Info -->
   <tr>
-    <td style="font-size:18px; color:#FFF; padding-bottom: 20px;">
-      <table border="0" cellpadding="4" cellspacing="0">
+    <td style="font-size:18px; color:#FFF; padding: 12px 0;">
+        <table border="0" cellpadding="4" cellspacing="0">
+
+        <!-- Office + Emergency in one line -->
         <tr>
-          <td style="padding-top: 40px;" valign="middle" width="40"><img src="https://i.ibb.co/QFrrhBbW/Group-2.png" width="" alt="Office Phone"></td>
-          <td  style="padding-top: 40px;"><strong>Office:</strong> <a href="tel:1234567890" style="color:#FFF; text-decoration:none;">123-456-7890</a></td>
+            <td valign="middle" width="40">
+            <img src="https://i.ibb.co/QFrrhBbW/Group-2.png" alt="Office Phone">
+            </td>
+            <td>
+            <strong>Office:</strong> 
+            <a href="tel:02078288253" style="color:#FFF; text-decoration:none;">0207 828 8253</a>
+            &nbsp; | &nbsp;
+            <strong>Emergency:</strong> 
+            <a href="tel:07831406242" style="color:#FFF; text-decoration:none;">07831 406242</a>
+            </td>
         </tr>
+
+        <!-- Mobile -->
         <tr>
-          <td valign="middle" width="40"><img src="https://i.ibb.co/R42pD34g/Frame-8.png" width="" alt="Mobile"></td>
-          <td><strong>Mobile:</strong> <a href="tel:1234567890" style="color:#FFF; text-decoration:none;">123-456-7890</a></td>
+            <td valign="middle" width="40">
+            <img src="https://i.ibb.co/R42pD34g/Frame-8.png" alt="Mobile">
+            </td>
+            <td>
+            <strong>Mobile:</strong> 
+            <a href="tel:07831406242" style="color:#FFF; text-decoration:none;">07831 406242</a>
+            </td>
         </tr>
+
+        <!-- Website -->
         <tr>
-          <td valign="middle" width="40"><img src="https://i.ibb.co/TxHV1XV7/Frame-7.png" width="" alt="Emergency"></td>
-          <td><strong>Emergency:</strong> <a href="tel:1234567890" style="color:#FFF; text-decoration:none;">123-456-7890</a></td>
+            <td valign="middle" width="40">
+            <img src="https://i.ibb.co/mV31xyjY/Frame-3.png" alt="Website">
+            </td>
+            <td>
+            <strong>Website:</strong> 
+            <a href="https://www.hallinans.co.uk" style="color:#FFF; text-decoration:none;">www.hallinans.co.uk</a>
+            </td>
         </tr>
+
+        <!-- Emails -->
         <tr>
-          <td valign="middle" width="40"><img src="https://i.ibb.co/mV31xyjY/Frame-3.png" width="" alt="Website"></td>
-          <td><strong>Website:</strong> <a href="https://www.hallinans.example" style="color:#FFF; text-decoration:none;">www.hallinans.example</a></td>
+            <td valign="middle" width="40">
+            <img src="https://i.ibb.co/cKSVSz26/Group-3.png" alt="Email">
+            </td>
+            <td>
+            <strong>Secure email:</strong> 
+            <a href="mailto:namita.pawa@hallinans.co.uk" style="color:#FFF; text-decoration:none;">namita.pawa@hallinans.co.uk</a> 
+            &nbsp; | &nbsp;
+            <a href="mailto:namita.pawa@cjsm.net" style="color:#FFF; text-decoration:none;">namita.pawa@cjsm.net</a>
+            </td>
         </tr>
+
+        <!-- Address -->
         <tr>
-          <td valign="middle" width="40"><img src="https://i.ibb.co/cKSVSz26/Group-3.png" width="" alt="CJSM"></td>
-          <td><strong>Secure email:</strong> <a href="mailto:namita.pawa@hallinans.cjsm.net" style="color:#FFF; text-decoration:none;">namita.pawa@hallinans.cjsm.net</a></td>
+            <td valign="top">
+            <img src="https://i.ibb.co/S4PnQKsd/Frame-10.png" alt="Address">
+            </td>
+            <td>
+            <a href="https://www.google.com/maps?q=Alexandra+House,+55A+Catherine+Place,+London+SW1E+6DY" target="_blank" style="color:#FFF; text-decoration:none;">
+                Alexandra House, 55A Catherine Place, London SW1E 6DY
+            </a>
+            </td>
         </tr>
-      </table>
+     </table>
     </td>
   </tr>
 
@@ -52,13 +100,13 @@
   <tr>
     
     <td>
-      <a href="https://uk.linkedin.com/company/hallinan-blackburn-gittings-nott-llp" style="text-decoration:none;">
+      <a target="_blank" href="https://uk.linkedin.com/company/hallinan-blackburn-gittings-nott-llp" style="text-decoration:none;">
         <img src="https://i.ibb.co/Zz1qzvQc/Frame-4.png" alt="LinkedIn" width="" style="margin-right:6px; vertical-align:middle;">
       </a>
-      <a href="https://www.facebook.com/p/Hallinan-Blackburn-Gittings-Nott-61554381287448/" style="text-decoration:none;">
+      <a target="_blank" href="https://www.facebook.com/p/Hallinan-Blackburn-Gittings-Nott-61554381287448/" style="text-decoration:none;">
         <img src="https://i.ibb.co/hFDhY52h/Frame-5.png" alt="Facebook" width="" style="margin-right:6px; vertical-align:middle;">
       </a>
-      <a href="https://www.instagram.com/hallinanscriminaldefence/?hl=en" style="text-decoration:none;">
+      <a target="_blank" href="https://www.instagram.com/hallinanscriminaldefence/?hl=en" style="text-decoration:none;">
         <img src="https://i.ibb.co/HLmtB0Tc/Frame-6.png" alt="Instagram" width="" style="vertical-align:middle;">
       </a>
     </td>
@@ -73,7 +121,7 @@
             <img src="https://i.ibb.co/CppJ7nSn/The-Times-BLF2026-Logo-Standard.jpg" alt="The Times" width="100%" style="display:block;">
           </td>
           <td align="center" width="50%" style="padding:10px;">
-            <img src="https://i.ibb.co/fYbzjxps/Current-signature-N-Pawa-Hallinans-Nov-2025.jpg" alt="Chambers & Partners NP" width="100%" style="display:block; margin:0 auto;">
+           <img src="https://i.ibb.co/7Jf3m6tB/Firm-Logo-1.jpg" alt="Chambers & Partners Firm" width="100%" style="display:block; margin:0 auto;">
           </td>
         </tr>
         <tr>
@@ -81,8 +129,8 @@
             <img src="https://i.ibb.co/7Jf3m6tB/Firm-Logo-1.jpg" alt="Chambers & Partners Firm" width="100%" style="display:block; margin:0 auto;">
           </td>
           <td align="center" width="50%" style="padding:10px;">
-            <img src="https://i.ibb.co/8kfr39G/Legal-500-UK-Leading-firm-2026.png" alt="Legal 500" width="100%" style="display:block; margin:0 auto;">
-          </td>
+           <img src="https://i.ibb.co/7th7SPPV/UK-Leading-firm-2026-272x300.webp" alt="Legal 500" width="100%" style="display:block; margin:0 auto;">
+           </td>
         </tr>
       </table>
     </td>
